<resources>
    <string name="app_name">Github Users</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="share">Share</string>
    <string name="user_detail">User Details</string>
    <string name="test_image">Test Image</string>
    <string name="detail_view">Details</string>
    <string name="refresh">Refresh</string>
    <string name="some_error">Sorry an error occurred \n Refresh to try again</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter username</string>
    <string name="test_text" translatable="false">Codeshifu</string>
    <string name="user_not_found">Oops. User does not exist.</string>
    <string name="settings">Settings</string>
    <string name="repo" translatable="false"><b>Repos</b>: %1$s</string>
    <string name="followers"><b>Followers</b>: %1$s</string>
    <string name="following"><b>Following</b>: %1$s</string>
    <string name="bio">Bio: </string>

    <!-- Labels for the language settings -->
    <string name="settings_language_javascript_label" translatable="false">JavaScript</string>
    <string name="settings_language_python_label" translatable="false">Python</string>
    <string name="settings_language_java_label" translatable="false">Java</string>
    <string name="settings_language_ruby_label" translatable="false">Ruby</string>
    <string name="settings_language_php_label" translatable="false">PHP</string>
    <string name="settings_language_cpp_label" translatable="false">C++</string>
    <string name="settings_language_css_label" translatable="false">CSS</string>
    <string name="settings_language_cshp_label" translatable="false">C#</string>

    <!-- values for the language settings -->
    <string name="settings_language_javascript_value" translatable="false">javascript</string>
    <string name="settings_language_python_value" translatable="false">python</string>
    <string name="settings_language_java_value" translatable="false">java</string>
    <string name="settings_language_ruby_value" translatable="false">ruby</string>
    <string name="settings_language_php_value" translatable="false">php</string>
    <string name="settings_language_cpp_value" translatable="false">c++</string>
    <string name="settings_language_css_value" translatable="false">css</string>
    <string name="settings_language_cshp_value" translatable="false">c#</string>

    <string name="settings_language_default" translatable="false">java</string>
    <string name="settings_language_key">language</string>
    <string name="settings_language_label">Language</string>

    <string name="settings_location_default" translatable="false">lagos</string>
    <string name="settings_location_key" translatable="false">location</string>
    <string name="settings_location_label">Location</string>

    <string name="settings_repos_default" translatable="false">0</string>
    <string name="settings_repos_key" translatable="false">repos</string>
    <string name="settings_repos_label" translatable="false">Repos</string>

    <string name="settings_followers_default" translatable="false">0</string>
    <string name="settings_followers_key" translatable="false">followers</string>
    <string name="settings_followers_label" translatable="false">Followers</string>

    <string name="settings_title">Search Settings</string>
    <string name="empty" />
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>
